--- a/_notebooks/2022-08-28-Fastpages-Post.ipynb
+++ b/_notebooks/2022-08-28-Fastpages-Post.ipynb
@@ -1,31 +1,22 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Fastpages.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "V0mLtiebFWwe"
+        "id": "V0mLtiebFWwe",
+        "vscode": {
+          "languageId": "shellscript"
+        }
       },
       "outputs": [],
       "source": []
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "tbdka_DqFene"
+      },
       "source": [
         "#Github FastPages project by Prasith Chilla using Jupyter Notebooks\n",
         "\n",
@@ -36,19 +27,35 @@
         "- comments: true\n",
         "- image: images/padelpy.png\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "tbdka_DqFene"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "4n03eqVBFZDq"
-      },
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "4n03eqVBFZDq",
+        "vscode": {
+          "languageId": "shellscript"
+        }
+      },
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Fastpages.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Bash",
+      "language": "bash",
+      "name": "bash"
+    },
+    "language_info": {
+      "name": "bash"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
