Add title for Quiz

--- a/_notebooks/2022-08-28-NBAQUIZ.ipynb
+++ b/_notebooks/2022-08-28-NBAQUIZ.ipynb
@@ -37,6 +37,13 @@
     "\n",
     "print(\"You got:\", (points/4)*100, \"%\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- title: NBA Quiz"
+   ]
   }
  ],
  "metadata": {
