Edit QUiz title

--- a/_notebooks/2022-08-28-NBAQUIZ.ipynb
+++ b/_notebooks/2022-08-28-NBAQUIZ.ipynb
@@ -1,11 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- title: NBA Quiz"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "points = 0\n",
     "answer = input(\"Who won the 2021-2022 NBA Championship?\")\n",
     "if answer == \"Warriors\":\n",
