--- a/_notebooks/2022-08-28-NBAQUIZ.ipynb
+++ b/_notebooks/2022-08-28-NBAQUIZ.ipynb
@@ -3,8 +3,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "- title: NBA Quiz"
+    "---\n",
+    "title: NBA Quiz\n",
+    "---"
    ]
   },
   {
@@ -44,13 +51,6 @@
     "    print(\"incorrect answer\")\n",
     "\n",
     "print(\"You got:\", (points/4)*100, \"%\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- title: NBA Quiz"
    ]
   }
  ],
