--- a/_notebooks/2022-08-28-Fastpages-Post.ipynb
+++ b/_notebooks/2022-08-28-Fastpages-Post.ipynb
@@ -1,16 +1,26 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---\n",
+        "title: Github Jupyter Notebook\n",
+        "---"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "V0mLtiebFWwe",
         "vscode": {
-          "languageId": "shellscript"
+          "languageId": "python"
         }
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "print(\"Hello World\")"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -28,18 +38,6 @@
         "- image: images/padelpy.png\n",
         "\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "4n03eqVBFZDq",
-        "vscode": {
-          "languageId": "shellscript"
-        }
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
@@ -48,12 +46,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Bash",
-      "language": "bash",
-      "name": "bash"
-    },
-    "language_info": {
-      "name": "bash"
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3"
     }
   },
   "nbformat": 4,
