header for quiz title

--- a/_notebooks/2022-08-28-NBAQUIZ.ipynb
+++ b/_notebooks/2022-08-28-NBAQUIZ.ipynb
@@ -9,6 +9,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# NBA Quiz"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "title: NBA Quiz\n",
     "---"
