New jupyter notebook

--- a/_notebooks/2022-08-28-Fastpages-Post.ipynb
+++ b/_notebooks/2022-08-28-Fastpages-Post.ipynb
@@ -5,7 +5,13 @@
       "metadata": {},
       "source": [
         "---\n",
-        "title: Github Jupyter Notebook\n",
+        "title: My first Jupyter Notebook\n",
+        "\n",
+        "- toc: true \n",
+        "- badges: true\n",
+        "- comments: true\n",
+        "- categories: [jupyter]\n",
+        "- title: My First Jypter Notebook\n",
         "---"
       ]
     },
