--- a/_notebooks/2022-08-28-Fastpages-Post.ipynb
+++ b/_notebooks/2022-08-28-Fastpages-Post.ipynb
@@ -17,13 +17,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "vscode": {
           "languageId": "python"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Hello World\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"Hello World\")"
       ]
