Quiz using function

--- a/_notebooks/2022-08-28-NBAQUIZ.ipynb
+++ b/_notebooks/2022-08-28-NBAQUIZ.ipynb
@@ -28,36 +28,21 @@
    "outputs": [],
    "source": [
     "\n",
-    "points = 0\n",
-    "answer = input(\"Who won the 2021-2022 NBA Championship?\")\n",
-    "if answer == \"Warriors\":\n",
-    "    print(\"Correct answer!\")\n",
-    "    points += 1\n",
-    "else: \n",
-    "    print(\"incorrect answer\")\n",
-    "    \n",
-    "answer = input(\"Which NBA franchise has the most MVP winners?\")\n",
-    "if answer == \"Celtics\":\n",
-    "    print(\"Correct answer!\")\n",
-    "    points += 1\n",
-    "else: \n",
-    "    print(\"incorrect answer\")\n",
-    "    \n",
-    "answer = input(\"Who won the 2021-2022 NBA MVP?\")\n",
-    "if answer == \"Nikola Jokic\":\n",
-    "    print(\"Correct answer!\")\n",
-    "    points += 1\n",
-    "else: \n",
-    "    print(\"incorrect answer\")\n",
-    "\n",
-    "answer = input(\"Which NBA team(s) has the most rings?\")\n",
-    "if answer == \"Celtics\":\n",
-    "    print(\"Correct answer!\")\n",
-    "    points += 1\n",
-    "else: \n",
-    "    print(\"incorrect answer\")\n",
-    "\n",
-    "print(\"You got:\", (points/4)*100, \"%\")"
+    "def quiz():\n",
+    "    points = 0\n",
+    "    questions = [\"Who won the 2021-2022 NBA Championship?\", \"Which NBA franchise has the most MVP winners?\", \"Who won the 2021-2022 NBA MVP?\", \"Which NBA team(s) has the most rings?\"]\n",
+    "    answers = [\"Warriors\", \"Celtics\", \"Nikola Jokic\", \"Celtics\"]\n",
+    "    num = 0\n",
+    "    while num <= 3:\n",
+    "        answer = input(questions[num])\n",
+    "        if answer == answers[num]:\n",
+    "            print(\"Correct\")\n",
+    "            points = points + 1\n",
+    "        else:\n",
+    "            print(\"Incorrect\")\n",
+    "        num += 1\n",
+    "    print(\"You got:\", (points/4)*100, \"%\")\n",
+    "quiz()"
    ]
   }
  ],
