--- a/_notebooks/2022-08-28-Fastpages-Post.ipynb
+++ b/_notebooks/2022-08-28-Fastpages-Post.ipynb
@@ -4,6 +4,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "# \"First Jupyter Notebook\""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "---\n",
         "title: My first Jupyter Notebook\n",
         "\n",
