--- a/_notebooks/2022-08-28-bash.ipynb
+++ b/_notebooks/2022-08-28-bash.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "title: Bash Notebook\n",
-    "---"
+    "# \"Bash Checks\""
    ]
   },
   {
