python dictionary quiz

--- a/_notebooks/2022-09-01-PythonHacks.ipynb
+++ b/_notebooks/2022-09-01-PythonHacks.ipynb
@@ -16,14 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'FirstName': 'John', 'LastName': 'Mortensen', 'DOB': 'October 21', 'Residence': 'San Diego', 'Email': 'jmortensen@powayusd.com', 'Owns_Cars': ['2015-Fusion', '2011-Ranger', '2003-Excursion', '1997-F350', '1969-Cadillac']}, {'FirstName': 'Sunny', 'LastName': 'Naidu', 'DOB': 'August 2', 'Residence': 'Temecula', 'Email': 'snaidu@powayusd.com', 'Owns_Cars': ['4Runner']}, {'FirstName': 'Prasith', 'LastName': 'Chilla', 'DOB': 'January 9', 'Residence': 'San Diego', 'Email': 'prasithchilla@gmail.com', 'Owns_Cars': ['none']}]\n"
+      "[{'FirstName': 'John', 'LastName': 'Mortensen', 'DOB': 'October 21', 'Residence': 'San Diego', 'Email': 'jmortensen@powayusd.com', 'Owns_Cars': ['2015-Fusion', '2011-Ranger', '2003-Excursion', '1997-F350', '1969-Cadillac']}, {'FirstName': 'Sunny', 'LastName': 'Naidu', 'DOB': 'August 2', 'Residence': 'Temecula', 'Email': 'snaidu@powayusd.com', 'Owns_Cars': ['4Runner']}, {'FirstName': 'Prasith', 'LastName': 'Chilla', 'DOB': 'January 9', 'Residence': 'San Diego', 'Email': 'prasithchilla@gmail.com', 'Owns_Cars': ['none']}]\n",
+      "3\n"
      ]
     }
    ],
@@ -62,7 +63,9 @@
     "})\n",
     "\n",
     "# Print the data structure\n",
-    "print(InfoDb)"
+    "print(InfoDb)\n",
+    "x = len(InfoDb)\n",
+    "print(x)\n"
    ]
   },
   {
@@ -74,13 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "3\n",
       "John Mortensen\n",
       "\t Residence: San Diego\n",
       "\t Birth Day: October 21\n",
@@ -101,6 +105,7 @@
    ],
    "source": [
     "x = len(InfoDb)\n",
+    "print(x)\n",
     "i = 0\n",
     "def print_data(d_rec):\n",
     "    print(d_rec[\"FirstName\"], d_rec[\"LastName\"])  # using comma puts space between values\n",
@@ -113,6 +118,52 @@
     "    record = InfoDb[i]\n",
     "    print_data(record)\n",
     "    i += 1 \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct\n",
+      "Correct\n",
+      "Correct\n",
+      "Correct\n",
+      "You got 75.0 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "QuizDb = []\n",
+    "QuizDb.append({\n",
+    "    \"Q1\": \"Who won the 2021-2022 NBA Championship?\",\n",
+    "    \"A1\":\"Warriors\",\n",
+    "    \"Q2\": \"Which NBA franchise has the most MVP winners?\",\n",
+    "    \"A2\": \"Celtics\",\n",
+    "    \"Q3\": \"Who won the 2021-2022 NBA MVP?\",\n",
+    "    \"A3\": \"Nikola Jokic\",\n",
+    "    \"Q4\": \"Which NBA team(s) has the most rings?\",\n",
+    "    \"A4\": \"Celtics\"\n",
+    "   \n",
+    "})\n",
+    "\n",
+    "def quiz():\n",
+    "    s = 1\n",
+    "    points = 0 \n",
+    "    while s <= 4:\n",
+    "        answer = input(QuizDb[0][\"Q\"+str(s)])\n",
+    "        if answer == QuizDb[0][\"A\"+str(s)]:\n",
+    "            print(\"Correct\")\n",
+    "            points += 1 \n",
+    "        else: \n",
+    "            print(\"Correct\")\n",
+    "        s +=1\n",
+    "    print(\"You got\", 100*(points/4), \"%\")\n",
+    "quiz()"
    ]
   }
  ],
