--- a/_notebooks/2022-09-04-HTMLHacks.ipynb
+++ b/_notebooks/2022-09-04-HTMLHacks.ipynb
@@ -16,7 +16,10 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "1. Findings From Dark Mode:\n",
+    "- picture does not display\n"
+   ]
   }
  ],
  "metadata": {
