change of theme

--- a/_notebooks/2022-09-04-HTMLHacks.ipynb
+++ b/_notebooks/2022-09-04-HTMLHacks.ipynb
@@ -17,8 +17,8 @@
    },
    "outputs": [],
    "source": [
-    "1. Findings From Dark Mode:\n",
-    "- picture does not display\n"
+    "1. Findings from theme change:\n",
+    "- The theme doesn't work. It fails to build because of an issue with Jekyll. \n"
    ]
   }
  ],
