--- a/_notebooks/2022-09-04-HTMLHacks.ipynb
+++ b/_notebooks/2022-09-04-HTMLHacks.ipynb
@@ -18,7 +18,23 @@
    "outputs": [],
    "source": [
     "1. Findings from theme change:\n",
-    "- The theme doesn't work. It fails to build because of an issue with Jekyll. \n"
+    "- The theme doesn't work. It fails to build because of an issue with Jekyll. \n",
+    "- The end result is just the regular site, however some of the text has changed to different colors. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "<body>\n",
+    "    <img src=\"https://ibb.co/wWbWgKm\">\n",
+    "</body>"
    ]
   }
  ],
