--- a/_notebooks/2022-09-01-PythonHacks.ipynb
+++ b/_notebooks/2022-09-01-PythonHacks.ipynb
@@ -17,7 +17,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -78,7 +82,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -123,7 +131,11 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "python"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -160,7 +172,7 @@
     "            print(\"Correct\")\n",
     "            points += 1 \n",
     "        else: \n",
-    "            print(\"Correct\")\n",
+    "            print(\"Incorrect\")\n",
     "        s +=1\n",
     "    print(\"You got\", 100*(points/4), \"%\")\n",
     "quiz()"
@@ -172,18 +184,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
