--- a/_notebooks/2022-08-28-NBAQUIZ.ipynb
+++ b/_notebooks/2022-08-28-NBAQUIZ.ipynb
@@ -16,6 +16,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [Posts]\n",
+    "- title: NBA Quiz\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "title: NBA Quiz\n",
     "---"
