--- a/_notebooks/2022-08-28-bash.ipynb
+++ b/_notebooks/2022-08-28-bash.ipynb
@@ -8,6 +8,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [Posts]\n",
+    "- title: Bash Checks\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
