HTML hack screenshot

--- a/_notebooks/2022-09-04-HTMLHacks.ipynb
+++ b/_notebooks/2022-09-04-HTMLHacks.ipynb
@@ -29,8 +29,8 @@
    "outputs": [],
    "source": [
     "1. Findings from theme change:\n",
-    "- The theme doesn't work. It fails to build because of an issue with Jekyll. \n",
-    "- The end result is just the regular site, however some of the text has changed to different colors. "
+    "- The theme I used was the hacker theme. It made the entire site black with green text. Overall the coloring of the theme looks nice\n",
+    "however the pages are not visible. On top of that the posts looks a lot worse as it is displayed as text."
    ]
   },
   {
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "<body>\n",
-    "    <img src=\"https://ibb.co/wWbWgKm\">\n",
+    "    <img src=\"https://ibb.co/1vYYg5b\"\">\n",
     "</body>"
    ]
   }
