--- a/_notebooks/2022-08-28-NBAQUIZ.ipynb
+++ b/_notebooks/2022-08-28-NBAQUIZ.ipynb
@@ -9,18 +9,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \"NBA Quiz\""
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [Posts]\n",
+    "- title: NBA Quiz"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- toc: true \n",
-    "- badges: true\n",
-    "- comments: true\n",
-    "- categories: [Posts]\n",
-    "- title: NBA Quiz\n"
+    "# \"NBA Quiz\""
    ]
   },
   {
