--- a/_notebooks/2022-08-28-Fastpages-Post.ipynb
+++ b/_notebooks/2022-08-28-Fastpages-Post.ipynb
@@ -27,7 +27,7 @@
       "execution_count": 1,
       "metadata": {
         "vscode": {
-          "languageId": "python"
+          "languageId": "shellscript"
         }
       },
       "outputs": [
@@ -50,9 +50,12 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
-      "name": "python3"
+      "display_name": "Bash",
+      "language": "bash",
+      "name": "bash"
+    },
+    "language_info": {
+      "name": "bash"
     }
   },
   "nbformat": 4,
