image on html hack

--- a/_posts/2022-09-05-HTMLHack1.md
+++ b/_posts/2022-09-05-HTMLHack1.md
@@ -4,7 +4,7 @@ toc: true
 description: Hack1(Theme Change)
 title: HTML Hack 1
 ---
-# HTML Hacks
+
 
 <body>
 <p>1. Findings from theme change:
@@ -12,5 +12,5 @@ title: HTML Hack 1
 however the pages are not visible. On top of that the posts looks a lot worse as it is displayed as text.</p>
 </body>
 <body>
-    <img src="https://ibb.co/1vYYg5b">
+    <img src="https://github.com/BuddaBaker/Fastpages/blob/master/images/theme.png">
 </body>
