--- a/_notebooks/2022-09-04-HTMLHacks.ipynb
+++ b/_notebooks/2022-09-04-HTMLHacks.ipynb
@@ -4,11 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [Posts]\n",
-    "- title: HTML Hacks\n"
+    "- title: HTML Hacks\n",
+    "---\n"
    ]
   },
   {
