image for html hacks

--- a/_posts/2022-09-05-HTMLHack1.md
+++ b/_posts/2022-09-05-HTMLHack1.md
@@ -11,6 +11,6 @@ title: HTML Hack 1
 - The theme I used was the hacker theme. It made the entire site black with green text. Overall the coloring of the theme looks nice
 however the pages are not visible. On top of that the posts looks a lot worse as it is displayed as text.</p>
 </body>
-<body>
-    <img src="https://github.com/BuddaBaker/Fastpages/blob/master/images/theme.png">
-</body>
+
+
+<body><img src="https://github.com/BuddaBaker/Fastpages/blob/master/images/theme.png"></body>
