setting categories to jupyter

--- a/_notebooks/2020-02-20-test.ipynb
+++ b/_notebooks/2020-02-20-test.ipynb
@@ -11,7 +11,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter]\n",
-    "- title: My First Jypter Notebook"
+    "- title: My First Juypter Notebook"
    ]
   },
   {
