--- a/_posts/2022-09-05-HTMLHack1.md
+++ b/_posts/2022-09-05-HTMLHack1.md
@@ -14,3 +14,4 @@ however the pages are not visible. On top of that the posts looks a lot worse as
 
 
 <body><img src="https://github.com/BuddaBaker/Fastpages/blob/master/images/theme.png"></body>
+<body><img src="https://github.com/BuddaBaker/Fastpages/blob/master/images/theme.png?raw=true"></body>
