--- a/_notebooks/2022-08-28-NBAQUIZ.ipynb
+++ b/_notebooks/2022-08-28-NBAQUIZ.ipynb
@@ -12,7 +12,7 @@
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [Posts]\n",
+    "- categories: [jupyter]\n",
     "- title: NBA Quiz"
    ]
   },
