--- a/_notebooks/2022-09-01-PythonHacks.ipynb
+++ b/_notebooks/2022-09-01-PythonHacks.ipynb
@@ -7,7 +7,7 @@
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [Posts]\n",
+    "- categories: [jupyter]\n",
     "- title: Python Hacks\n"
    ]
   },
