--- a/_notebooks/2022-09-01-PythonHacks.ipynb
+++ b/_notebooks/2022-09-01-PythonHacks.ipynb
@@ -4,11 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- toc: true \n",
-    "- badges: true\n",
-    "- comments: true\n",
-    "- categories: [jupyter]\n",
-    "- title: Python Hacks\n"
+    "---\n",
+    "toc: true\n",
+    "layout: post\n",
+    "description: Python List Hacks\n",
+    "categories: [posts]\n",
+    "title:  Week 2 - HTML Fragments\n",
+    "---"
    ]
   },
   {
