--- a/_notebooks/2022-09-01-PythonHacks.ipynb
+++ b/_notebooks/2022-09-01-PythonHacks.ipynb
@@ -8,6 +8,7 @@
     "toc: true\n",
     "layout: post\n",
     "description: Python List Hacks\n",
+    "permalink: /posts\n",
     "categories: [posts]\n",
     "title:  Week 2 - HTML Fragments\n",
     "---"
@@ -17,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \"Python Hacks Week\""
+    "# \"Python Hacks \""
    ]
   },
   {
