reset python tags

--- a/_notebooks/2022-09-01-PythonHacks.ipynb
+++ b/_notebooks/2022-09-01-PythonHacks.ipynb
@@ -4,14 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "toc: true\n",
-    "layout: post\n",
-    "description: Python List Hacks\n",
-    "permalink: /posts\n",
-    "categories: [posts]\n",
-    "title:  Week 2 - HTML Fragments\n",
-    "---"
+    "- toc: false\n",
+    "- branch: master\n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [markdown]"
    ]
   },
   {
