--- a/_notebooks/2022-09-01-PythonHacks.ipynb
+++ b/_notebooks/2022-09-01-PythonHacks.ipynb
@@ -8,7 +8,7 @@
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [markdown]"
+    "- categories: [jupyter]"
    ]
   },
   {
