--- a/_notebooks/2022-09-04-HTMLHacks.ipynb
+++ b/_notebooks/2022-09-04-HTMLHacks.ipynb
@@ -4,14 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "- toc: true \n",
+    "- toc: false\n",
+    "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [Posts]\n",
-    "- title: HTML Hacks\n",
-    "\n",
-    "---\n"
+    "- categories: [jupyter]"
    ]
   },
   {
