--- a/_notebooks/2022-08-28-NBAQUIZ.ipynb
+++ b/_notebooks/2022-08-28-NBAQUIZ.ipynb
@@ -13,6 +13,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter]\n",
+    "- tags: [jupyter]\n",
     "- title: NBA Quiz"
    ]
   },
