front matter wrong fix

--- a/_notebooks/2022-08-28-bash.ipynb
+++ b/_notebooks/2022-08-28-bash.ipynb
@@ -4,6 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Bash Notebook\n",
+    "> Bash Notebook\n",
+    "\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
