--- a/_notebooks/2022-08-28-NBAQUIZ.ipynb
+++ b/_notebooks/2022-08-28-NBAQUIZ.ipynb
@@ -9,12 +9,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Nba Quiz\n",
+    "> Nba Quiz\n",
+    "\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jupyter]\n",
-    "- tags: [jupyter]\n",
-    "- title: NBA Quiz"
+    "- categories: [Posts]\n",
+    "- title: NBA Quiz\n"
    ]
   },
   {
