Hacks tags added

--- a/_notebooks/2022-09-04-HTMLHacks.ipynb
+++ b/_notebooks/2022-09-04-HTMLHacks.ipynb
@@ -4,11 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- toc: false\n",
-    "- branch: master\n",
+    "# HTML Hacks\n",
+    "> HTML Hacks\n",
+    "\n",
+    "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jupyter]"
+    "- categories: [Posts]\n",
+    "- title: HTML Hacks"
    ]
   },
   {
