--- a/_notebooks/2022-09-01-PythonHacks.ipynb
+++ b/_notebooks/2022-09-01-PythonHacks.ipynb
@@ -4,11 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- toc: false\n",
-    "- branch: master\n",
+    "# Python Hacks\n",
+    "> Python Hacks\n",
+    "\n",
+    "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jupyter]"
+    "- categories: [Posts]\n",
+    "- title: Python Hacks\n"
    ]
   },
   {
