--- a/_notebooks/2022-08-28-bash.ipynb
+++ b/_notebooks/2022-08-28-bash.ipynb
@@ -53,6 +53,7 @@
     }
    ],
    "source": [
+    "echo \"hi\"\n",
     "echo \"Using conditional statement to create a project directory and project\"\n",
     "\n",
     "# Variable section\n",
