--- a/_notebooks/2022-08-28-NBAQUIZ.ipynb
+++ b/_notebooks/2022-08-28-NBAQUIZ.ipynb
@@ -72,7 +72,7 @@
     "            print(\"Incorrect\")\n",
     "        num += 1\n",
     "    print(\"You got:\", (points/4)*100, \"%\")\n",
-    "quiz()"
+    "quiz()\n"
    ]
   }
  ],
