--- a/_notebooks/2022-09-25-javascriptutorial.ipynb
+++ b/_notebooks/2022-09-25-javascriptutorial.ipynb
@@ -54,6 +54,133 @@
     "logItType(2020);    // Number\n",
     "logItType([1, 2, 3]);  // Object is generic for this Array, which similar to Python List"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function Team(qb, wr, te) {\n",
+    "    this.qb = qb;\n",
+    "    this.wr = wr;\n",
+    "    this.te = te;\n",
+    "    this.role = \"\";\n",
+    "}\n",
+    "\n",
+    "// define a setter for role in Person data\n",
+    "Team.prototype.setRole = function(role) {\n",
+    "    this.role = role;\n",
+    "}\n",
+    "\n",
+    "// define a JSON conversion \"method\" associated with Person\n",
+    "Person.prototype.toJSON = function() {\n",
+    "    const obj = {name: this.name, ghID: this.ghID, classOf: this.classOf, role: this.role};\n",
+    "    const json = JSON.stringify(obj);\n",
+    "    return json;\n",
+    "}\n",
+    "\n",
+    "// make a new Person and assign to variable teacher\n",
+    "var teacher = new Person(\"Mr M\", \"jm1021\", 1977);  // object type is easy to work with in JavaScript\n",
+    "logItType(teacher);  // before role\n",
+    "logItType(teacher.toJSON());  // ok to do this even though role is not yet defined\n",
+    "\n",
+    "// output of Object and JSON/string associated with Teacher\n",
+    "teacher.setRole(\"Teacher\");   // set the role\n",
+    "logItType(teacher); \n",
+    "logItType(teacher.toJSON());"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var students = [ \n",
+    "    new Person(\"Anthony\", \"tonyhieu\", 2022),\n",
+    "    new Person(\"Bria\", \"B-G101\", 2023),\n",
+    "    new Person(\"Allie\", \"xiaoa0\", 2023),\n",
+    "    new Person(\"Tigran\", \"Tigran7\", 2023),\n",
+    "    new Person(\"Rebecca\", \"Rebecca-123\", 2023),\n",
+    "    new Person(\"Vidhi\", \"unknown\", 2024)\n",
+    "];\n",
+    "\n",
+    "// define a classroom and build Classroom objects and json\n",
+    "function Classroom(teacher, students){ // 1 teacher, many student\n",
+    "    // start Classroom with Teacher\n",
+    "    teacher.setRole(\"Teacher\");\n",
+    "    this.teacher = teacher;\n",
+    "    this.classroom = [teacher];\n",
+    "    // add each Student to Classroom\n",
+    "    this.students = students;\n",
+    "    this.students.forEach(student => { student.setRole(\"Student\"); this.classroom.push(student); });\n",
+    "    // build json/string format of Classroom\n",
+    "    this.json = [];\n",
+    "    this.classroom.forEach(person => this.json.push(person.toJSON()));\n",
+    "}\n",
+    "\n",
+    "// make a CompSci classroom from formerly defined teacher and students\n",
+    "compsci = new Classroom(teacher, students);\n",
+    "\n",
+    "// output of Objects and JSON in CompSci classroom\n",
+    "logItType(compsci.classroom);  // constructed classroom object\n",
+    "logItType(compsci.classroom[0].name);  // abstract 1st objects name\n",
+    "logItType(compsci.json[0]);  // show json conversion of 1st object to string\n",
+    "logItType(JSON.parse(compsci.json[0]));  // show JSON.parse inverse of JSON.stringify"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// define an HTML conversion \"method\" associated with Classroom\n",
+    "Classroom.prototype._toHtml = function() {\n",
+    "    // HTML Style is build using inline structure\n",
+    "    var style = (\n",
+    "      \"display:inline-block;\" +\n",
+    "      \"border: 2px solid grey;\" +\n",
+    "      \"box-shadow: 0.8em 0.4em 0.4em grey;\"\n",
+    "    );\n",
+    "  \n",
+    "    // HTML Body of Table is build as a series of concatenations (+=)\n",
+    "    var body = \"\";\n",
+    "    // Heading for Array Columns\n",
+    "    body += \"<tr>\";\n",
+    "    body += \"<th><mark>\" + \"Name\" + \"</mark></th>\";\n",
+    "    body += \"<th><mark>\" + \"GitHub ID\" + \"</mark></th>\";\n",
+    "    body += \"<th><mark>\" + \"Class Of\" + \"</mark></th>\";\n",
+    "    body += \"<th><mark>\" + \"Role\" + \"</mark></th>\";\n",
+    "    body += \"</tr>\";\n",
+    "    // Data of Array, iterate through each row of compsci.classroom \n",
+    "    for (var row of compsci.classroom) {\n",
+    "      // tr for each row, a new line\n",
+    "      body += \"<tr>\";\n",
+    "      // td for each column of data\n",
+    "      body += \"<td>\" + row.name + \"</td>\";\n",
+    "      body += \"<td>\" + row.ghID + \"</td>\";\n",
+    "      body += \"<td>\" + row.classOf + \"</td>\";\n",
+    "      body += \"<td>\" + row.role + \"</td>\";\n",
+    "      // tr to end line\n",
+    "      body += \"<tr>\";\n",
+    "    }\n",
+    "  \n",
+    "     // Build and HTML fragment of div, table, table body\n",
+    "    return (\n",
+    "      \"<div style='\" + style + \"'>\" +\n",
+    "        \"<table>\" +\n",
+    "          body +\n",
+    "        \"</table>\" +\n",
+    "      \"</div>\"\n",
+    "    );\n",
+    "  \n",
+    "  };\n",
+    "  \n",
+    "  // IJavaScript HTML processor receive parameter of defined HTML fragment\n",
+    "  $$.html(compsci._toHtml());"
+   ]
   }
  ],
  "metadata": {
@@ -63,9 +190,23 @@
    "name": "javascript"
   },
   "language_info": {
-   "name": "javascript"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "javascript",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "eb0c6f2cfc33f72ce3c0f4d4daeda7f779d16a1228752f49211f3596bf51e2a4"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
