--- a/_notebooks/2020-02-20-test.ipynb
+++ b/_notebooks/2020-02-20-test.ipynb
@@ -72,11 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -101,11 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#collapse-hide\n",
@@ -123,11 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#collapse-show\n",
@@ -148,11 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -179,11 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# hide\n",
@@ -197,11 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#hide\n",
@@ -218,11 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -318,11 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -412,10 +380,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "scrolled": true,
-    "vscode": {
-     "languageId": "shellscript"
-    }
+    "scrolled": true
    },
    "outputs": [
     {
@@ -539,11 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -835,9 +796,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Bash",
-   "language": "bash",
-   "name": "bash"
+   "display_name": "JavaScript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
    "codemirror_mode": {
@@ -846,7 +807,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "bash",
+   "name": "javascript",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.7"
