--- a/_notebooks/2022-10-07-APIHACKS.ipynb
+++ b/_notebooks/2022-10-07-APIHACKS.ipynb
@@ -1,11 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---\n",
+    "title: My first Jupyter Notebook\n",
+    "\n",
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [jupyter]\n",
+    "- title: My First Jypter Notebook\n",
+    "---"
+   ]
   },
   {
    "cell_type": "code",
