--- a/_notebooks/2022-08-28-Fastpages-Post.ipynb
+++ b/_notebooks/2022-08-28-Fastpages-Post.ipynb
@@ -50,12 +50,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Bash",
-      "language": "bash",
-      "name": "bash"
+      "display_name": "Python 3.9.12 ('base')",
+      "language": "python",
+      "name": "python3"
     },
     "language_info": {
-      "name": "bash"
+      "name": "python",
+      "version": "3.9.12"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "eb0c6f2cfc33f72ce3c0f4d4daeda7f779d16a1228752f49211f3596bf51e2a4"
+      }
     }
   },
   "nbformat": 4,
