--- a/_posts/2022-10-07-APIHACKS.md
+++ b/_posts/2022-10-07-APIHACKS.md
@@ -14,6 +14,22 @@ layout: notebook
 
 <div class="container" id="notebook-container">
         
+<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<hr>
+<p>title: My first Jupyter Notebook</p>
+<ul>
+<li>toc: true </li>
+<li>badges: true</li>
+<li>comments: true</li>
+<li>categories: [jupyter]</li>
+<li>title: My First Jypter Notebook</li>
+</ul>
+<hr>
+
+</div>
+</div>
+</div>
     {% raw %}
     
 <div class="cell border-box-sizing code_cell rendered">
