--- a/_notebooks/2022-10-07-APIHACKS.ipynb
+++ b/_notebooks/2022-10-07-APIHACKS.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: My first Jupyter Notebook\n",
+    "title: API Hacks\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [jupyter]\n",
-    "- title: My First Jypter Notebook\n",
+    "- title: API Hacks\n",
     "---"
    ]
   },
