--- a/_notebooks/2022-10-07-APIHACKS.ipynb
+++ b/_notebooks/2022-10-07-APIHACKS.ipynb
@@ -4,15 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "title: API Hacks\n",
+    "# API\n",
+    "> API\n",
     "\n",
     "- toc: true \n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [jupyter]\n",
-    "- title: API Hacks\n",
-    "---"
+    "- categories: [Posts]\n",
+    "- title: API"
    ]
   },
   {
