--- a/_posts/2022-10-07-APIHACKS.md
+++ b/_posts/2022-10-07-APIHACKS.md
@@ -1,6 +1,11 @@
 ---
 keywords: fastai
-title: Title
+description: API
+title: NBA Quiz
+toc: true 
+badges: true
+comments: true
+categories: [Posts]
 nb_path: _notebooks/2022-10-07-APIHACKS.ipynb
 layout: notebook
 ---
@@ -14,22 +19,6 @@ layout: notebook
 
 <div class="container" id="notebook-container">
         
-<div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<hr>
-<p>title: API Hacks</p>
-<ul>
-<li>toc: true </li>
-<li>badges: true</li>
-<li>comments: true</li>
-<li>categories: [jupyter]</li>
-<li>title: API Hacks</li>
-</ul>
-<hr>
-
-</div>
-</div>
-</div>
     {% raw %}
     
 <div class="cell border-box-sizing code_cell rendered">
