--- a/_notebooks/2022-11-07-FixingMistakes.ipynb
+++ b/_notebooks/2022-11-07-FixingMistakes.ipynb
@@ -20,17 +20,17 @@
    "source": [
     "Question 14:\n",
     "- The answer were B and D. I put only B and the reason its D is because when you plug it in the answer is D it gives you check instead of what you want. \n",
-    "Question 16:\n",
+    "-Question 16:\n",
     "- The answer I put was A when the answer is B because for A the packets can be sent and recieved in any order\n",
-    "Question 17:\n",
+    "-Question 17:\n",
     "- The answer I put was A but the correct answer is D because protocols are previously agreed upon rules\n",
-    "Question 28:\n",
+    "-Question 28:\n",
     "- The answer I put was D but the correct answer is C because the code correctly sets cost and Numunits\n",
-    "Question 35:\n",
+    "-Question 35:\n",
     "- The answer I put was C but the correct answer is D because the IF statement works and gives the desired output\n",
-    "Question 38:\n",
+    "-Question 38:\n",
     "- The answer I put was C but the correct answer is B because it corrects states the new variables \n",
-    "Question 45:\n",
+    "-Question 45:\n",
     "- - The answer I put was C but the correct answer is B because it correctly prints the values of count1 and count2\n"
    ]
   }
