--- a/_notebooks/2022-11-07-FixingMistakes.ipynb
+++ b/_notebooks/2022-11-07-FixingMistakes.ipynb
@@ -19,19 +19,55 @@
    "metadata": {},
    "source": [
     "Question 14:\n",
-    "- The answer were B and D. I put only B and the reason its D is because when you plug it in the answer is D it gives you check instead of what you want. \n",
+    "- The answer were B and D. I put only B and the reason its D is because when you plug it in the answer is D it gives you check instead of what you want. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "-Question 16:\n",
-    "- The answer I put was A when the answer is B because for A the packets can be sent and recieved in any order\n",
+    "- The answer I put was A when the answer is B because for A the packets can be sent and recieved in any order"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "-Question 17:\n",
-    "- The answer I put was A but the correct answer is D because protocols are previously agreed upon rules\n",
+    "- The answer I put was A but the correct answer is D because protocols are previously agreed upon rules"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "-Question 28:\n",
-    "- The answer I put was D but the correct answer is C because the code correctly sets cost and Numunits\n",
+    "- The answer I put was D but the correct answer is C because the code correctly sets cost and Numunits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "-Question 35:\n",
-    "- The answer I put was C but the correct answer is D because the IF statement works and gives the desired output\n",
+    "- The answer I put was C but the correct answer is D because the IF statement works and gives the desired output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "-Question 38:\n",
-    "- The answer I put was C but the correct answer is B because it corrects states the new variables \n",
+    "- The answer I put was C but the correct answer is B because it corrects states the new variables "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "-Question 45:\n",
-    "- - The answer I put was C but the correct answer is B because it correctly prints the values of count1 and count2\n"
+    "- The answer I put was C but the correct answer is B because it correctly prints the values of count1 and count2"
    ]
   }
  ],
